# pathways-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev.py  dev.sh  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml
.github/workflows/: build-and-image.yaml  build-and-release.yml  build.yaml  ci.yaml  image.yaml
app/: config.py  main.py
app/models/: __init__.py  gsea.py
app/routers/: __init__.py  gsea.py  pathways.py  umap.py
app/scripts/: __init__.py  prepare_gene_lists.py
app/services/: __init__.py  gsea.py  pathways_service.py  umap_service.py
app/utils/: __init__.py  gsea_utils.py
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000095/: .part-00000-c029ccd0-ae00-4d76-9edb-9646c7ee9141-c000.snappy.parquet.crc
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000096/: part-00000-0765035b-ada8-4d2e-b934-33cab448898d-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000178/: .part-00000-f27fa579-de31-41d0-9d75-a91096d60088-c000.snappy.parquet.crc  part-00000-f27fa579-de31-41d0-9d75-a91096d60088-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000181/: .part-00000-17a53cd2-590d-4182-a33b-1d23961922c2-c000.snappy.parquet.crc
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000182/: part-00000-1bb071d1-e37a-4a89-bed8-433df9b29f81-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000199/: .part-00000-42c23b13-1e92-4f23-a152-a8866357952b-c000.snappy.parquet.crc
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000200/: .part-00000-17532bdd-8289-49f6-9236-fad33ab01df0-c000.snappy.parquet.crc
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000209/: .part-00000-1b8e7aa8-c987-4181-bcfa-d3ae7f1f6174-c000.snappy.parquet.crc  part-00000-1b8e7aa8-c987-4181-bcfa-d3ae7f1f6174-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000220/: part-00000-1af1898e-2b5e-4b0a-91f5-dc49607b53d9-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000222/: .part-00000-117bc5b9-b037-4bfe-a0f7-93ddacb60f5c-c000.snappy.parquet.crc  part-00000-117bc5b9-b037-4bfe-a0f7-93ddacb60f5c-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000228/: .part-00000-5190f895-516c-451e-ace7-748379ed9b30-c000.snappy.parquet.crc  part-00000-5190f895-516c-451e-ace7-748379ed9b30-c000.snappy.parquet
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000232/: .part-00000-86bbf9db-d353-4b1e-b0c4-53aa6b271922-c000.snappy.parquet.crc
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000246/: .part-00000-cdd2f38c-58d6-4cdd-a9ea-c856edef7580-c000.snappy.parquet.crc
data/Reactome_Pathways_2025_diy_v2/diseaseId=EFO_0000272/: part-00000-4582ef6d-94b8-4adb-b20a-e2a01d9bbe12-c000.snappy.parquet
python2java/: umap_static.py
ui/: .env.development  README.md  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
(+4577 files in other folders)
