[project]
name = "pathways-api"
version = "0.1.0"
description = "Pathways API for Open Targets - A comprehensive API for pathway analysis and visualization"
readme = "README.md"
authors = [{ name = "Open Targets", email = "contact@opentargets.org" }]
license = { text = "Apache-2.0" }
keywords = ["pathways", "bioinformatics", "api", "open-targets", "gsea", "umap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pyspark>=4.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
    "blitzgsea>=1.3.54",
    "pandas>=2.2.3",
    "umap>=0.1.1",
    "hdbscan>=0.8.40",
    "numpy>=1.26.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = ["ruff>=0.7.1"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "W503", "S101", "S104", "S105", "S106", "S107"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
