[project]
name = "pathways-api"
version = "0.1.0"
description = "FastAPI service for pathway analysis (GSEA, UMAP) for Open Targets"
authors = [{ name = "Open Targets", email = "contact@opentargets.org" }]
readme = "README.md"


requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pyspark>=4.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
    "blitzgsea>=1.3.54",
    "pandas>=2.2.3",
    "umap>=0.1.1",
    "hdbscan>=0.8.40",
    "numpy>=1.26.4",
]

[dependency-groups]
lint = ["ruff>=0.7.1"]