[project]
name = "pathways-api"
version = "0.1.0"
description = "FastAPI service for pathway analysis (GSEA) for Open Targets"
authors = [{ name = "Open Targets", email = "contact@opentargets.org" }]
readme = "README.md"


requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pyspark>=4.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
    "blitzgsea>=1.3.54",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "google-cloud-storage>=3.4.1",
    "pyarrow>=22.0.0",
    "gcsfs>=2025.9.0",
]

[dependency-groups]
lint = ["ruff>=0.7.1"]